--- a/project_name/api/Gemfile
+++ b/project_name/api/Gemfile
@@ -33,6 +33,10 @@ gem 'activestorage-validator'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem "rspec-rails"
+  gem "factory_bot_rails"
+  gem 'faker' # ダミーデータを作成するため
+  gem 'gimei' # 日本語のダミーデータを作成するため
 end
 
 group :development do
