--- a/project_name/api/Gemfile
+++ b/project_name/api/Gemfile
@@ -30,6 +30,8 @@ gem 'devise_token_auth'
 
 gem 'activestorage-validator'
 
+gem 'devise-two-factor'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
